styles.css
body,
* {
	font-family: "Hack NF";
	padding: 0;
	text-align: center;
	box-sizing: border-box;
}

a:hover {
	color: rgb(255, 0, 0);
}

ul {
	list-style-type: none;
	padding: 0;
}

ul li {
	padding-top: 20px;
	padding-bottom: 20px;
	text-align: center;
}
.Titre-Principale {
	height: 18vh;
	display: flex;
	justify-content: space-between;
	align-items: center;
}
.empty {
	width: 20%;
	display: inline-block;
	color: white;
}
#logo-img {
	height: auto;
	display: inline-block;
	padding: 20px;
	width: 20%;
	max-width: 240px;
	max-height: 240px;
	min-height: 70px;
	min-width: 70px;
}
.center {
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.mainTitle {
	text-align: center;
	display: inline-block;
}

.recipeHeaders {
	text-decoration: underline;
}

.RecipeItem {
	text-align: left;
	margin: 0;
	padding-top: 0;
	padding-bottom: 0;
}
button,
input {
	width: 25%;
	min-height: 20px;
	padding: 15px 40px;
	background-color: white;
	border-style: solid;
	border-color: black;
	border-width: 2px;
	border-radius: 5px;
	cursor: pointer;
	color: black;
	font-weight: bold;
	margin: 10px;
}
button:hover,
.btnSubmit:hover {
	transition: 0.5s;
	color: white;
	background-color: black;
}

.container {
	display: flex;
	justify-content: center;
	flex-direction: column;
	align-items: center;
}

.textInput {
	cursor: text;
	text-align: center;
	max-width: 25%;
	margin: 15px;
}

#UserInfos {
	display: none;
}

.step {
	text-align: left;
	margin: 30px;
}
a {
	color: black;
}

@media screen and (max-width: 500px) {
	body {
		font-size: 10px;
	}
	#logo-img {
		width: 18vw;
		height: auto;
		top: 8vh;
		padding: 12px;
	}
	.mainTitle {
		font-size: 14px;
	}
	.Titre-Principale {
		height: 20em;
	}
}

